# whale-spectrogram-dataset-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: classes.txt
data/samples/labels/line_level/: Hawaii_338_19780226_tp1A_pg1.json
data/samples/labels/page_level/: Hawaii_337_19780206_tp1B_pg1.json
src/: evaluate.py  loaders.py  requirements.txt  transforms.py  utils.py  visualization.py  whale_dataset.py  whales_dataset.py
src/whale_spectrogram_dataset_tools/: __init__.py  evaluate.py  visualization.py
