[project]
name = "whale-spectrogram-dataset-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "auto-mix-prep>=0.2.0",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
]

[project.optional-dependencies] # Needed for notebook development and testing
dev = [
    "jupyterlab",
    "ipykernel",
]

[tool.uv]
package = true
index-strategy = "unsafe-best-match"

[project.scripts]
whales-eval = "whale_spectrogram_dataset_tools.evaluate:main"
whales-visualize = "whale_spectrogram_dataset_tools.visualization:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
